log
Wed 23 Aug 2023 07:06:01 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4cb653b
Wed 23 Aug 2023 07:06:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b40c1c3
Wed 23 Aug 2023 07:25:39 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:20: error: ‘List’ {aka ‘struct List’} has no member named ‘head_’; did you mean ‘head’?
   46 |     return &(list->head_>data);
      |                    ^~~~~
      |                    head
list.c:46:26: error: ‘data’ undeclared (first use in this function)
   46 |     return &(list->head_>data);
      |                          ^~~~
list.c:46:26: note: each undeclared identifier is reported only once for each function it appears in
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9afe478
Wed 23 Aug 2023 07:25:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:25: error: ‘data’ undeclared (first use in this function)
   46 |     return &(list->head>data);
      |                         ^~~~
list.c:46:25: note: each undeclared identifier is reported only once for each function it appears in
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
078063c
Wed 23 Aug 2023 07:27:19 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:47:25: error: ‘data’ undeclared (first use in this function)
   47 |     return &(list->head>data);
      |                         ^~~~
list.c:47:25: note: each undeclared identifier is reported only once for each function it appears in
list.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c229188
Wed 23 Aug 2023 07:41:40 PM UTC: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:25: error: ‘data’ undeclared (first use in this function)
   40 |     return &(list->head>data);
      |                         ^~~~
list.c:40:25: note: each undeclared identifier is reported only once for each function it appears in
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
240af89
